<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Build</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Button">Search</string>
    <string name="Text">Search Now</string>
    <string name="Startup">Start Up Screen</string>
    <string name="title">title</string>
    <string name="desc">desc</string>
    <string name="date">date</string>
    <string name="desc1">Descrption</string>
    <string name="btitle">Book_Name</string>
    <string name="bauthor">Author</string>
    <string name="bdesc">Description of the book adjkfbadjjbsdkbvkjsbdvjskvbjsb</string>
    <string name="Price">PRICE</string>

</resources>