<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
  <!--    android:background="@drawable/list_bg"--> 

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:contentDescription="@android:string/unknownName"
        android:layout_margin="5dp"
        android:background="#444"
        android:padding="3dp" />

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_toLeftOf="@+id/tvdate"
        android:layout_toRightOf="@+id/image"
        android:maxLines="1"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvdesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtitle"
        android:layout_toLeftOf="@+id/imageView1"
        android:layout_toRightOf="@+id/image"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/desc"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dip"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/pbar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/image"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@android:string/unknownName"
        android:layout_marginRight="3dp"
        android:src="@drawable/imgright" /> 

</RelativeLayout>