<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230sp" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="230sp"
            android:layout_weight="0.13" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="@string/btitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@android:string/untitled"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView1"
                android:layout_marginLeft="19dp"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/bauthor"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignTop="@+id/progressBar1"
                android:height="110dp"
                android:padding="5dp"
                android:text="@string/bdesc"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/imageView1"
                android:layout_below="@+id/textView1"
                android:layout_marginRight="35dp"
                android:layout_marginTop="14dp" />

        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.33" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <ImageView
                    android:id="@+id/flipiview"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:contentDescription="@android:string/untitled"
                    android:padding="10dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/fliptview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Price"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/flipBuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@android:string/untitled"
                    android:padding="10dp"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <ImageView
                    android:id="@+id/infiiview"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:contentDescription="@android:string/untitled"
                    android:padding="10dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/infitview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Price"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/infiBuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@android:string/untitled"
                    android:padding="10dp"
                    android:src="@drawable/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <ImageView
                    android:id="@+id/bookaddaiview"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:contentDescription="@android:string/untitled"
                    android:padding="10dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/bookaddatview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Price"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

               <ImageButton
                   android:id="@+id/bookaddabuy"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:contentDescription="@android:string/untitled"
                   android:padding="10dp"
                   android:src="@drawable/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <ImageView
                    android:id="@+id/landmarkiview"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:contentDescription="@android:string/untitled"
                    android:padding="10dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/landmarktview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Price"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

               <ImageButton
                   android:id="@+id/landmarkbuy"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:contentDescription="@android:string/untitled"
                   android:padding="10dp"
                   android:src="@drawable/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <ImageView
                    android:id="@+id/ureadiview"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:contentDescription="@android:string/untitled"
                    android:padding="10dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/ureadtview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Price"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/ureadbuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@android:string/untitled"
                    android:padding="10dp"
                    android:src="@drawable/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <ImageView
                    android:id="@+id/homeshopiview"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_launcher" />
                <TextView
                    android:id="@+id/homeshoptview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
               <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>